--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -90,7 +90,7 @@
       </div>
       <div class="clr-col-8">
         <button class="btn btn-primary btn-outline btn-sm">
-          <input type="file" #fileInput style="display: none;" (change)="fileChangeEvent($event)">
+          <input type="file" #fileInput style="display: none;">
           {{'Camera' | translate}}<clr-icon shape="image"></clr-icon>
         </button>
       </div>
@@ -101,8 +101,8 @@
       </div>
       <div class="clr-col-6" class="clr-select-wrapper">
         <select class="clr-select" name="doctype" [(ngModel)]="doctype">
-          <option [value]="code">Indentify Card</option>
-          <option [value]="code">Picture</option>
+          <option [value]="i">Indentify Card</option>
+          <option [value]="p">Picture</option>
         </select>
       </div>
     </div>
@@ -112,7 +112,7 @@
       </div>
       <div class="clr-col-8">
         <button class="btn btn-primary btn-outline btn-sm">
-          <input type="file" #fileInput style="display: none;" (change)="fileChangeEvent($event)">
+          <input type="file" #fileInput style="display: none;">
           {{'Browse' | translate}}<clr-icon shape="image"></clr-icon>
         </button>
       </div>
