--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -101,8 +101,8 @@
       </div>
       <div class="clr-col-6" class="clr-select-wrapper">
         <select class="clr-select" name="doctype" [(ngModel)]="doctype">
-          <option [value]="i">Indentify Card</option>
-          <option [value]="p">Picture</option>
+          <option>Indentify Card</option>
+          <option>Picture</option>
         </select>
       </div>
     </div>
