--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -114,7 +114,7 @@
       <div class="clr-col-6">
         <label class="btn btn-primary btn-outline btn-sm">
           <input type="file" #file accept="image/jpeg,image/jpg,image/png" style="display: none;"
-            (change)="onChangeDoc($evnet)" accept='image/jpeg,image/jpg,image/png'>
+            (change)="onChangeDoc($event)" accept='image/jpeg,image/jpg,image/png'>
           {{'Browse' | translate}}<clr-icon shape="image"></clr-icon>
         </label>
       </div>
