--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="clr-row">
+  <div class="clr-col-12" style="text-align: right;" (click)="onClickChangeLangue()">change languae</div>
+</div>
 <div class="card">
   <div class="card-block">
     <div class="clr-row">
