--- a/src/app/langual/langual.component.html
+++ b/src/app/langual/langual.component.html
@@ -12,7 +12,7 @@
   <div class="detail" style="text-align: center ;">
     <h4>Languae</h4>
   </div>
-  <div class="detail" ><img style="width:100%" (click)="onClick()" src="./assets/th_flag.png" alt=""></div>
-  <div class="detail" ><img style="width:100%" (click)="onClick()" src="./assets/us_flag.png" alt=""></div>
-  <div class="detail" ><img style="width:100%"(click)="onClick()"  src="./assets/myanmar_flag.png" alt=""> </div>
+  <div class="detail" ><img style="width:100%" (click)="onClick('TH')" src="./assets/th_flag.png" alt=""></div>
+  <div class="detail" ><img style="width:100%" (click)="onClick('EN')" src="./assets/us_flag.png" alt=""></div>
+  <div class="detail" ><img style="width:100%"(click)="onClick('MM')"  src="./assets/myanmar_flag.png" alt=""> </div>
   </div>
