--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+
 .wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     height: calc(100vh - 20px);
-  }
+}
+
+.width-fit {
+    width: 100%;
+}
+
+input[type="color"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+select:focus,
+textarea {
+  font-size: 14px !important;
+}
+
+
+/* disable auto-zoom on iphone input field focus */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+
+	select:focus,
+	textarea:focus,
+	input:focus {
+		font-size: 14px !important;
+	}
+}
