--- a/src/app/camera/camera.component.html
+++ b/src/app/camera/camera.component.html
@@ -27,6 +27,6 @@
   </div>
   <div class="modal-footer">
     <button class="btn btn-success" (click)="save()">บันทึก</button>
-    <!-- <button class="btn btn-danger" (click)="modalWebcam = false;showWebcam = false">ปิด</button> -->
+    <button class="btn btn-danger" (click)="modalWebcam = false;showWebcam = false">ปิด</button>
   </div>
 </clr-modal>
